trunk/Archive2/1c/c2c68b9866b737/output
main.cpp:1:5: error: expected unqualified-id before '=' token
 char=c
     ^
main.cpp:4:3: error: expected unqualified-id before 'while'
 } while( char=c );
   ^
main.cpp:5:1: error: expected unqualified-id before 'if'
 if (char=c) {
 ^
main.cpp:7:3: error: expected unqualified-id before 'else'
 } else {
   ^
